finished compiling the data into json

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,8 @@
 # Project-specific folders
 grass_dataset_viewer/chair
 grass_dataset_viewer/virtual_env
+grass_dataset_viewer/__pycache__
+virtual
 
 # Package Files
 *.zip
